# software-engineer

./: .clang-format  .gitignore  .pre-commit-config.yaml  .style.yapf  07_camelcase_decorator.py  1-overview-of-sfpi.md  8-cpp-type-system.md  CITATION.cff  README.md
.github/: CODEOWNERS
CUDA/: 1-introduction-to-CUDA.md  2-CUDA-host-programming.md  3-CUDA-kernel-programming.md
MPI/: 1-practice-pi.md  README.md
cpp-OOP/: 05-encapsulation.md  08-template.md
cpp-advanced/: 02-memory-stack-and-heap.md  05-weak_ptr.md  08-cpp-type-system.md  09-header-file.md  1-cpp-rvalue-references-explained.md  10-translation-units-and-linkage.md  11-main-function-and-command-line-arguments.md  12-program-termination.md  13-noexcept.md  14-return-value-optimization.md  15-constexpr.md  16-lvalues-and-rvalues.md  17-temporary-object.md  18-data-alignment.md  19-trivial-standard-layout-POD-literal-types.md  20-classes-as-value-types.md  21-type-conversions-and-type-safety.md  22-standard-conversions.md  23-declarations-and-definitions.md  24-storage-classes.md  25-alignas.md  26-auto.md  (+64 more)
cpp-cookbook/: 04-unordered_set.cpp  05-unordered_map.cpp  08-deque.cpp  1-vector.cpp  10-priority_queue.cpp  11-matmul.cpp  12-unique_ptr-scratch.cpp  13-class-hierarchy.cpp  14-thread-safe-blocking-queue.cpp  15-resource-manager.cpp  16-data-transformation.cpp  17-LRU-cache.cpp  18-linked-list.cpp  19-linked-list-unique_ptr.cpp  2-set.cpp  20-cycle-in-linked-list.cpp  21-merge-two-sorted-linked-lists.cpp  3-map.cpp  6-stack.cpp  7-queue.cpp  9-bitset.cpp  CMakeLists.txt  README.md  build.sh
(+479 files in other folders)
