cmake_minimum_required(VERSION 3.10)
project(cpp_cookbook LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
file(GLOB CPP_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
foreach(SRC_FILE IN LISTS CPP_SOURCES)
    get_filename_component(EXECUTABLE_NAME "${SRC_FILE}" NAME_WE)
    add_executable(${EXECUTABLE_NAME} ${SRC_FILE})
endforeach()
